Checkout user functionallity
